--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Project4</title>
+    <title>Grid testing</title>
     <link rel="stylesheet" href="project4.css" >
 </head>
 <body>
